tests/Errors/Identifier.jack
class Identifier {
    static int x, true;
}
